# nanodrr

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  tests.yml
docs/: changes.md  index.md
docs/api/: camera.md  data.md  drr.md  geometry.md  metrics.md  plot.md  registration.md  scene.md
docs/javascripts/: katex.js
docs/tutorials/demo/: index.html
reference/SUMMARY/: index.html
reference/nanodrr/camera/: index.html
reference/nanodrr/camera/extrinsics/: index.html
reference/nanodrr/camera/homography/: index.html
reference/nanodrr/camera/intrinsics/: index.html
reference/nanodrr/data/: index.html
reference/nanodrr/data/demo/: index.html
reference/nanodrr/data/io/: index.html
reference/nanodrr/data/preprocess/: index.html
reference/nanodrr/drr/: index.html
reference/nanodrr/drr/drr/: index.html
reference/nanodrr/drr/render/: index.html
reference/nanodrr/geometry/: index.html
reference/nanodrr/geometry/se3/: index.html
reference/nanodrr/geometry/transform/: index.html
reference/nanodrr/metrics/: index.html
reference/nanodrr/metrics/geo/: index.html
reference/nanodrr/metrics/ncc/: index.html
reference/nanodrr/plot/: index.html
reference/nanodrr/plot/plot/: index.html
reference/nanodrr/registration/: index.html
reference/nanodrr/registration/registration/: index.html
reference/nanodrr/scene/: index.html
reference/nanodrr/scene/camera/: index.html
reference/nanodrr/scene/scene/: index.html
reference/nanodrr/scene/surface/: index.html
reference/nanodrr/scene/utils/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/nanodrr/camera/: __init__.py  extrinsics.py  homography.py  intrinsics.py  matrices.py
src/nanodrr/data/: __init__.py  demo.py  io.py  preprocess.py  subject.py
src/nanodrr/drr/: __init__.py  drr.py  render.py  renderer.py
src/nanodrr/geometry/: __init__.py  logexp.py  se3.py  so3.py  transform.py
src/nanodrr/metrics/: __init__.py  geo.py  ncc.py
src/nanodrr/plot/: __init__.py  animate.py  gif.py  imshow.py  plot.py
src/nanodrr/registration/: __init__.py  logexp.py  registration.py
src/nanodrr/scene/: __init__.py  camera.py  scene.py  surface.py  utils.py
src/nanodrr/warp/: render.py
tests/: benchmark.py  benchmark.sh
tests/benchmark/: benchmark.csv  benchmark.py  main.sh  plot.py
tests/camera/: test_extrinsics.py
tests/drr/: test_renderer.py
tests/geometry/: test_se3.py  test_transform.py
tutorials/: demo.ipynb  optim.ipynb  warp.ipynb
