[project]
name = "nanodrr"
version = "0.1.0"
description = "Blazing fast differentiable DRR rendering in modern PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jaxtyping>=0.3.0",
    "matplotlib",
    "roma>=1.5.6",
    "torch>=2.4",
    "torchio>=0.21.0",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
lint.ignore = [
    "F722",  # Forward annotation false positive from jaxtyping
    "F821",  # Forward annotation false positive from jaxtyping
]

[dependency-groups]
scene = [
    "pyvista[all]>=0.47.0",
    "torchio>=0.21.0",
    "viser>=1.0.0",
    "vtk>=9.6.0",
]
