[project]
name = "nanodrr"
version = "0.1.0"
description = "Blazing fast differentiable DRR rendering in modern PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jaxtyping>=0.3.0",
    "matplotlib>=3.0.0",
    "roma>=1.5.6",
    "torch>=2.4.0",
    "torchio>=0.21.0",
]

[project.optional-dependencies]
scene = [
    "pyvista[all]>=0.47.0",
    "vtk>=9.6.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F722",  # Forward annotation false positive from jaxtyping
    "F821",  # Forward annotation false positive from jaxtyping
]

[dependency-groups]
dev = [
    "prek>=0.3.2",
]
