[project]
name = "nanodrr"
version = "0.1.4"
description = "Blazing fast differentiable DRR rendering in modern PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jaxtyping>=0.3.0",
    "platformdirs>=4.0.0",
    "roma>=1.5.6",
    "setuptools>=82.0.0",
    "torch>=2.4.0",
    "torchio>=0.21.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.0.0",
    "opencv-python>=4.0.0",
]
scene = [
    "pyvista[all]>=0.47.0",
    "vtk>=9.6.0",
]
all = [
    "nanodrr[plot]",
    "nanodrr[scene]",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type Swig.*has no __module__:DeprecationWarning",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F722",  # Forward annotation false positive from jaxtyping
    "F821",  # Forward annotation false positive from jaxtyping
]

[tool.ty.src]
include = ["src"]

[dependency-groups]
benchmark = [
    "pandas>=2.3.3",
    "ultraplot>=2.0.1",
]
dev = [
    "prek>=0.3.2",
    "pytest>=9.0.2",
    "ty>=0.0.21",
]
docs = [
    "black>=26.1.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocstrings-python>=2.0.3",
    "nbconvert>=7.17.0",
    "zensical>=0.0.23",
]
